<resources>
    <string name="app_name">OSProject</string>
    <string name="account">Аккаунт</string>
    <string name="users">Пользователи</string>
    <string name="name">Имя</string>
    <string name="emailExample">emailexample@gmail.com</string>
    <string name="darkMode">Темный режим</string>
    <string name="sendFeedback">Сообщить о проблеме</string>
    <string name="version">Версия приложения</string>
    <string name="versionExample">1.0R</string>
    <string name="logoutFromAcc">Выйти из аккаунта</string>
    <string name="photoTitle">Фото</string>
    <string name="filesTitle">Файлы</string>
    <string name="homeTitle">Главная</string>
    <string name="generalTitle">Общее</string>
    <string name="accountTitle">Аккаунт</string>
    <string name="search">Поиск по названию</string>
    <string name="savedUsers">Сохраненные пользователи</string>
    <string name="notifications">Уведомления</string>
    <string name="trash">Корзина</string>
    <string name="sort">Сортировка</string>
    <string name="teams">Команды</string>
    <string name="usernameOrEmail">Имя пользователя или почта</string>
    <string name="password">Пароль</string>
    <string name="login">Вход</string>
    <string name="forgotPassword">Забыли пароль?</string>
    <string name="email">Электронная почта</string>
    <string name="phoneNumber">Номер телефона</string>
    <string name="username">Имя пользователя</string>
    <string name="createAccount">Создать аккаунт</string>
    <string name="alreadyHaveAccount">Уже есть аккаунт?</string>
    <string name="describeProblem">Опишите проблему</string>
    <string name="ok">Ок</string>
    <string name="cancel">Отмена</string>
    <string name="Test">test</string>
    <string name="favorites">Избранное</string>
    <string name="last">Последнее</string>
    <string name="fileExample">Название файла</string>
    <string name="sizeExample">5.8МБ</string>
    <string name="fileIcon">fileIcon</string>
    <string name="addFileButton">addFileButton</string>
    <string name="enterEmail">Введите почту, к которой привязан аккаунт:</string>
    <string name="register">Зарегистрироваться</string>
    <string name="delete">Delete</string>
    <string name="selectAll">Выбрать все</string>
    <string name="rename">Переименовать</string>
    <string name="returnBack">Вернуть из корзины</string>
    <string name="share">Поделиться</string>
</resources>