<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share"
        android:title="@string/share"
        android:icon="@drawable/share"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_delete"
        android:title="@string/delete"
        android:icon="@drawable/trash"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_select_all"
        android:title="@string/selectAll"
        android:icon="@drawable/select_all"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_rename"
        android:title="@string/rename"
        android:icon="@drawable/rename"
        app:showAsAction="ifRoom" />

</menu>