<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center" >

        <EditText
            android:id="@+id/username"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:background="@drawable/border_login"
            android:fontFamily="@font/el_messiri"
            android:hint="@string/username"
            android:textSize="11sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_login"
            android:fontFamily="@font/el_messiri"
            android:hint="@string/email"
            android:textSize="11sp" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_login"
            android:fontFamily="@font/el_messiri"
            android:hint="@string/phoneNumber"
            android:textSize="11sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_login"
            android:fontFamily="@font/el_messiri"
            android:hint="@string/password"
            android:textSize="11sp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="200dp"
            android:layout_height="40dp"
            style="@style/ButtonLoginStyle"
            android:text="@string/createAccount"
            android:fontFamily="@font/el_messiri"
            android:background="@drawable/background_login"
            android:layout_marginTop="18dp"/>

        <TextView
            android:id="@+id/alreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/alreadyHaveAccount"
            android:textColor="@color/middleGreen"
            android:fontFamily="@font/el_messiri"/>

    </LinearLayout>

</RelativeLayout>