<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:background="@drawable/border_login"
            android:fontFamily="@font/el_messiri"
            android:hint="@string/email"
            android:textSize="11sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:background="@drawable/border_login"
            android:fontFamily="@font/el_messiri"
            android:hint="@string/password"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/el_messiri"
            android:text="@string/forgotPassword"
            android:textColor="@color/middleGreen"
            android:textSize="11sp" />


        <Button
            android:id="@+id/loginButton"
            style="@style/ButtonLoginStyle"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="23dp"
            android:background="@drawable/background_login"
            android:fontFamily="@font/el_messiri"
            android:text="@string/login" />

        <TextView
            android:id="@+id/backOnRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/el_messiri"
            android:text="@string/register"
            android:textColor="@color/middleGreen"
            android:textSize="11sp" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/googleSignIn"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

</RelativeLayout>