<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Account">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/el_messiri"
            android:text="@string/account"
            android:textColor="#2C1E4D"
            android:textSize="24sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/spliter"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/header"
        android:background="@color/middleGreen"
        android:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_below="@id/spliter"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userAvatar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            app:civ_border_color="@color/middleGreen"
            app:civ_border_width="2dp" />

        <LinearLayout
            android:id="@+id/userInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/el_messiri"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/userEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/el_messiri"
                android:text="@string/emailExample"
                android:textColor="@color/black"
                android:textSize="17sp" />

        </LinearLayout>

    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:id="@+id/darkMode"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_below="@id/user"-->
<!--        android:clickable="true"-->
<!--        android:focusable="true"-->
<!--        android:foreground="?android:attr/selectableItemBackground"-->
<!--        android:gravity="center_vertical">-->
<!--        -->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center_vertical"-->
<!--            android:layout_marginStart="20dp"-->
<!--            android:fontFamily="@font/el_messiri"-->
<!--            android:text="@string/darkMode"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="18sp" />-->
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/darkMode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:text="@string/darkMode"
            android:fontFamily="@font/el_messiri"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_below="@id/user"
            android:checked="false"/>

    <!--    </LinearLayout>-->

    <LinearLayout
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/darkMode"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/el_messiri"
            android:text="@string/sendFeedback"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/feedback"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/el_messiri"
            android:text="@string/version"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="23dp"
            android:fontFamily="@font/el_messiri"
            android:text="@string/versionExample"
            android:textColor="@color/gray"
            android:textSize="18sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/clearCache"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/version"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/el_messiri"
            android:text="@string/clearCache"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/bottomMenu"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/el_messiri"
            android:text="@string/logoutFromAcc"
            android:textColor="@color/red"
            android:textSize="18sp" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomMenu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:itemIconTint="@color/bottom_navigation_items_color"
        app:itemTextAppearanceActive="@style/BottomNavigationViewTextStyle"
        app:itemTextAppearanceInactive="@style/BottomNavigationViewTextStyle"
        app:itemTextColor="@color/bottom_navigation_items_color"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_navigation_menu" />

</RelativeLayout>