<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="25dp"
            android:background="@color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/back" />

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="30dp"
                android:background="@drawable/border_login"
                android:fontFamily="@font/el_messiri"
                android:hint="@string/email"
                android:scrollbars="horizontal"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/describe"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_login"
                android:fontFamily="@font/el_messiri"
                android:hint="@string/describeProblem"
                android:scrollbars="vertical"
                android:inputType="textCapSentences"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/okButton"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/el_messiri"
                    android:text="@string/ok"
                    android:textAllCaps="false"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:fontFamily="@font/el_messiri"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textSize="15sp" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>