<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/recyclerViewItemsParent"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/recyclerViewImage"
            android:layout_width="29dp"
            android:layout_height="34dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:contentDescription="@string/fileIcon"
            android:scaleType="fitCenter"
            android:src="@drawable/file" />

        <LinearLayout
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@+id/recyclerViewImage"
            android:orientation="vertical">

            <TextView
                android:id="@+id/username"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:ellipsize="end"
                android:fontFamily="@font/el_messiri"
                android:maxLines="1"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/userEmail"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:ellipsize="end"
                android:fontFamily="@font/el_messiri"
                android:maxLines="1"
                android:text="@string/email"
                android:textColor="@color/darkGray"
                android:textSize="18sp" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/check_box"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="35dp"
            android:checked="true" />
    </RelativeLayout>

</LinearLayout>