<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/menu"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="25dp"
                android:background="@color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/menu" />

            <EditText
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/border_search"
                android:fontFamily="@font/el_messiri"
                android:hint="@string/search"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/addButton"
            android:layout_width="41dp"
            android:layout_height="41dp"
            android:layout_above="@id/bottomMenu"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="17dp"
            android:background="@color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/add" />

        <ToggleButton
            android:id="@+id/buttonLast"
            android:fontFamily="@font/el_messiri"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:layout_marginStart="60dp"
            android:checked="true"
            android:gravity="start"
            android:textColor="@color/darkGreen"
            android:textOff="@string/last"
            android:textOn="@string/last"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <ToggleButton
            android:id="@+id/buttonFav"
            android:fontFamily="@font/el_messiri"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp"
            android:checked="false"
            android:gravity="end"
            android:text="@string/favorites"
            android:textAllCaps="false"
            android:textColor="@color/darkGreenTrans"
            android:textOff="@string/favorites"
            android:textOn="@string/favorites"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewtest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonFav"
            android:text="Test"
            android:textSize="30sp"
            />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomMenu"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            app:itemIconTint="@color/bottom_navigation_items_color"
            app:itemTextAppearanceActive="@style/BottomNavigationViewTextStyle"
            app:itemTextAppearanceInactive="@style/BottomNavigationViewTextStyle"
            app:itemTextColor="@color/bottom_navigation_items_color"
            app:labelVisibilityMode="labeled"
            app:menu="@menu/bottom_navigation_menu" />


    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/side_menu_header"
        app:itemTextAppearance="@style/SideBarTextStyle"
        app:menu="@menu/side_menu_navigation" />

</androidx.drawerlayout.widget.DrawerLayout>